// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scales - dark theme 1`] = `
.c0 {
  color: #DAA520;
}

<div
  className="c0"
  color="primary"
/>
`;

exports[`Scales - light theme 1`] = `
.c0 {
  color: #0171b6;
}

<div
  className="c0"
  color="primary"
/>
`;

exports[`Scales - no theme 1`] = `
.c0 {
  color: #0171b6;
}

<div
  className="c0"
  color="primary"
/>
`;
